[gd_scene load_steps=43 format=3 uid="uid://cx2ye0w0rqf4n"]

[ext_resource type="Script" path="res://UI/hud.gd" id="1_a2y7d"]
[ext_resource type="Texture2D" uid="uid://c2e3eoxyqgivc" path="res://assets/energy.png" id="1_p7i3m"]
[ext_resource type="Texture2D" uid="uid://b4812ywitkgq0" path="res://assets/water.png" id="2_2ik4q"]
[ext_resource type="Texture2D" uid="uid://eluu412tp81f" path="res://assets/chunk.png" id="3_acu0v"]
[ext_resource type="Texture2D" uid="uid://bfaup65ugpegb" path="res://assets/ingot.png" id="4_q7b3k"]
[ext_resource type="Texture2D" uid="uid://db5h2n8wc1b1q" path="res://assets/sundial2.png" id="6_60k4m"]
[ext_resource type="Texture2D" uid="uid://cmvlebmq2gpxo" path="res://assets/pointer.png" id="7_2ohxd"]
[ext_resource type="Texture2D" uid="uid://ft47laog7nx3" path="res://assets/cobalt.png" id="8_6l8nk"]
[ext_resource type="Texture2D" uid="uid://gm8f1tim2xoe" path="res://assets/clone.png" id="9_bb551"]
[ext_resource type="Texture2D" uid="uid://w0vkk10ewy2j" path="res://assets/spark.png" id="9_fjlsm"]
[ext_resource type="Texture2D" uid="uid://c6qci8pbv05x" path="res://assets/linelight.png" id="11_vefkc"]
[ext_resource type="Texture2D" uid="uid://c6wsosjwa33v6" path="res://assets/Q.png" id="12_bh64y"]
[ext_resource type="Texture2D" uid="uid://dscxdahf1xr6y" path="res://assets/W.png" id="13_321fv"]
[ext_resource type="Script" path="res://UI/w.gd" id="14_kdc53"]
[ext_resource type="Texture2D" uid="uid://c8djgvipetf6n" path="res://assets/A.png" id="14_nhugq"]
[ext_resource type="Texture2D" uid="uid://pr2ephogtjv2" path="res://assets/S.png" id="15_3kp5x"]
[ext_resource type="Texture2D" uid="uid://cawgaq3kmdb1k" path="res://assets/D.png" id="16_7x7ja"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyiba"]
bg_color = Color(0.784314, 0.784314, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wm8pw"]
bg_color = Color(0.439216, 0.564706, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g1d2l"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cvxov"]
bg_color = Color(1, 1, 1, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dv2vv"]
bg_color = Color(0.752941, 0.627451, 0.376471, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5580"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3qyx"]
bg_color = Color(1, 1, 1, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgvjd"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jce3a"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2pt6"]
bg_color = Color(1, 1, 1, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="AtlasTexture" id="AtlasTexture_qv12f"]
atlas = ExtResource("12_bh64y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwaw8"]
atlas = ExtResource("12_bh64y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xy3gt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv12f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwaw8")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ck8lq"]
atlas = ExtResource("13_321fv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax4kr"]
atlas = ExtResource("13_321fv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gfwf8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck8lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax4kr")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qntuo"]
atlas = ExtResource("14_nhugq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djink"]
atlas = ExtResource("14_nhugq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_66hg2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qntuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djink")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_djo3c"]
atlas = ExtResource("15_3kp5x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6qjw"]
atlas = ExtResource("15_3kp5x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0euoe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djo3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6qjw")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_354iw"]
atlas = ExtResource("16_7x7ja")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8s7m"]
atlas = ExtResource("16_7x7ja")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fix3k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_354iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8s7m")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_a2y7d")

[node name="energy_bar" type="ProgressBar" parent="."]
offset_left = 64.0
offset_top = 32.0
offset_right = 364.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 11
theme_override_styles/fill = SubResource("StyleBoxFlat_eyiba")
value = 50.0

[node name="energy_label" type="Sprite2D" parent="."]
position = Vector2(32, 48)
texture = ExtResource("1_p7i3m")

[node name="water_bar" type="ProgressBar" parent="."]
offset_left = 64.0
offset_top = 80.0
offset_right = 364.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 11
theme_override_styles/fill = SubResource("StyleBoxFlat_wm8pw")
value = 50.0

[node name="water_clone_bar" type="ProgressBar" parent="water_bar"]
offset_right = 300.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 11
theme_override_styles/background = SubResource("StyleBoxFlat_g1d2l")
theme_override_styles/fill = SubResource("StyleBoxFlat_cvxov")
value = 25.0
show_percentage = false

[node name="water_label" type="Sprite2D" parent="."]
position = Vector2(32, 96)
texture = ExtResource("2_2ik4q")

[node name="silicon_bar" type="ProgressBar" parent="."]
offset_left = 64.0
offset_top = 128.0
offset_right = 364.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 11
theme_override_styles/fill = SubResource("StyleBoxFlat_dv2vv")
value = 50.0

[node name="silicon_clone_bar" type="ProgressBar" parent="silicon_bar"]
offset_right = 300.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 11
theme_override_styles/background = SubResource("StyleBoxFlat_r5580")
theme_override_styles/fill = SubResource("StyleBoxFlat_t3qyx")
value = 25.0
show_percentage = false

[node name="silicon_label" type="Sprite2D" parent="."]
modulate = Color(0.6, 1, 1, 1)
position = Vector2(32, 144)
texture = ExtResource("3_acu0v")

[node name="iron_bar" type="ProgressBar" parent="."]
offset_left = 64.0
offset_top = 176.0
offset_right = 364.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 11
theme_override_styles/fill = SubResource("StyleBoxFlat_vgvjd")
value = 50.0

[node name="iron_clone_bar" type="ProgressBar" parent="iron_bar"]
offset_right = 300.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 11
theme_override_styles/background = SubResource("StyleBoxFlat_jce3a")
theme_override_styles/fill = SubResource("StyleBoxFlat_t2pt6")
value = 25.0
show_percentage = false

[node name="iron_label" type="Sprite2D" parent="."]
modulate = Color(0.4, 0.4, 0.4, 1)
position = Vector2(32, 192)
texture = ExtResource("4_q7b3k")

[node name="sundial" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1792, 128)
scale = Vector2(2.2, 2.2)
texture = ExtResource("6_60k4m")

[node name="pointer" type="Sprite2D" parent="."]
position = Vector2(1792, 57.6)
scale = Vector2(1.1, 1.1)
texture = ExtResource("7_2ohxd")

[node name="day_label" type="Label" parent="."]
offset_left = 1728.0
offset_right = 1856.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -4
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "DAY -"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 3
uppercase = true

[node name="cobalt_light" type="Sprite2D" parent="."]
self_modulate = Color(0.0627451, 0.0627451, 0.0627451, 1)
position = Vector2(420, 64)
texture = ExtResource("8_6l8nk")

[node name="cobalt_glow" type="Sprite2D" parent="cobalt_light"]
visible = false
self_modulate = Color(0.0627451, 1, 1, 1)
show_behind_parent = true
position = Vector2(0, 4)
scale = Vector2(2, 2)
texture = ExtResource("9_fjlsm")

[node name="clone_light" type="Sprite2D" parent="."]
self_modulate = Color(0.0627451, 0.0627451, 0.0627451, 1)
position = Vector2(420, 144)
texture = ExtResource("9_bb551")

[node name="silicon_light" type="Sprite2D" parent="clone_light"]
self_modulate = Color(0.0627451, 0.0627451, 0.0627451, 1)
position = Vector2(-41, 0)
scale = Vector2(0.5, 1)
texture = ExtResource("11_vefkc")

[node name="iron_light" type="Sprite2D" parent="clone_light"]
self_modulate = Color(0.0627451, 0.0627451, 0.0627451, 1)
position = Vector2(-36, 36)
rotation = -0.785398
texture = ExtResource("11_vefkc")

[node name="water_light" type="Sprite2D" parent="clone_light"]
self_modulate = Color(0.0627451, 0.0627451, 0.0627451, 1)
position = Vector2(-36, -36)
rotation = 0.785398
texture = ExtResource("11_vefkc")

[node name="Q" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(960, 250)
sprite_frames = SubResource("SpriteFrames_xy3gt")
frame_progress = 0.25541

[node name="W" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(960, 440)
sprite_frames = SubResource("SpriteFrames_gfwf8")
autoplay = "default"
frame_progress = 0.447828
script = ExtResource("14_kdc53")

[node name="A" type="AnimatedSprite2D" parent="W"]
position = Vector2(-28, 28)
sprite_frames = SubResource("SpriteFrames_66hg2")
autoplay = "default"
frame_progress = 0.647316

[node name="S" type="AnimatedSprite2D" parent="W"]
position = Vector2(0, 28)
sprite_frames = SubResource("SpriteFrames_0euoe")
autoplay = "default"
frame_progress = 0.463283

[node name="D" type="AnimatedSprite2D" parent="W"]
position = Vector2(28, 28)
sprite_frames = SubResource("SpriteFrames_fix3k")
autoplay = "default"
frame_progress = 0.969204

[node name="Timer" type="Timer" parent="W"]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="W/Timer" to="W" method="_on_timer_timeout"]
